fixed the alignment of anchors

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ h1 {
 
 ul {
   list-style-type: none;
+  text-align: left;
+  padding: 0px;
 }
 
 a {
